--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <div class="modal-overlay">
       <div class="modal-container">
         <h3>modal content</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
+          possimus asperiores inventore.
+        </p>
         <button class="close-btn">
           <i class="fas fa-times"></i>
         </button>
